<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FAFAFA">
    <RelativeLayout
        android:id="@+id/order_fragment_child_item_title_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="店铺名称"
            android:padding="10dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:drawablePadding="12dp"
            android:drawableLeft="@mipmap/store_b"
            android:drawableRight="@mipmap/right_arrow"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:textColor="@color/colorAccent"
            android:layout_marginRight="10dp"
            android:text="@string/seller_shipped"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="#cdcdcd"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="#FAFAFA"
        android:padding="10dp">
        <ImageView
            android:id="@+id/order_fragment_child_item_img"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="1dp"
            android:background="@drawable/background_border"
            android:src="@mipmap/beauty"/>
        <TextView
            android:id="@+id/order_fragment_child_item_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:padding="2dp"
            android:layout_toRightOf="@+id/order_fragment_child_item_img"
            android:text="Risym电解电容16v/220uf体积6*7mm直插 优质电解电容 50只"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="x 1"
            android:textColor="@color/black"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/order_fragment_child_item_opt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="颜色:黑色；尺寸:XXL"
            android:paddingLeft="2dp"
            android:textSize="10sp"
            android:layout_below="@+id/order_fragment_child_item_desc"
            android:layout_toRightOf="@+id/order_fragment_child_item_img"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="￥2.50"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:paddingLeft="2dp"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/order_fragment_child_item_img"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:background="@color/white">
        <TextView
            android:id="@+id/order_fragment_child_item_freight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="#444444"
            android:text="(含运费￥0.00)"/>
        <TextView
            android:id="@+id/order_fragment_child_item_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/order_fragment_child_item_freight"
            android:layout_marginRight="5dp"
            android:textColor="#444444"
            android:text="￥24.00"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/order_fragment_child_item_total_price"
            android:layout_marginRight="2dp"
            android:textColor="#444444"
            android:text="共1件商品  合计:"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:background="@color/white">
        <TextView
            android:id="@+id/order_fragment_child_item_tv_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/orderItemTVStyle"
            android:layout_marginRight="10dp"
            android:text="@string/confirm_receipt"
            android:background="@drawable/order_text_button_selector"
            android:layout_alignParentTop="true"
            android:textColor="@color/white"
            android:layout_alignParentRight="true"/>
        <TextView
            android:id="@+id/order_fragment_child_item_tv_logistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_logistics"
            style="@style/orderItemTVStyle"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/order_fragment_child_item_tv_confirm"
            android:background="@drawable/order_text_common_button_selector" />
        <TextView
            android:id="@+id/order_fragment_child_item_tv_extenden_receipt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/orderItemTVStyle"
            android:layout_toLeftOf="@+id/order_fragment_child_item_tv_logistics"
            android:text="@string/extened_receipt"
            android:layout_marginRight="10dp"
            android:background="@drawable/order_text_common_button_selector" />
    </RelativeLayout>
    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0.2dp"-->
        <!--android:background="#cdcdcd"/>-->
</LinearLayout>