<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_search_wares"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mimile.onlinestore.view.activity.SearchWaresActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorAccentPress">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerVertical="true"
            android:gravity="center_vertical">
           <ImageView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginLeft="10dp"
               android:src="@drawable/ic_arrow_back_black_24dp"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="90dp"
                android:background="@drawable/shape_rounded_corner_bg">
                <TextView
                    android:id="@+id/activity_search_wares_kind_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="宝贝"
                    android:gravity="center"
                    android:drawablePadding="2dp"
                    android:drawableRight="@mipmap/text_indicator">

                </TextView>

                <EditText
                    android:id="@+id/activity_search_wares_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:hint="马克杯"
                    android:textColorHint="#666"
                    android:textColor="@color/black"
                    android:layout_marginRight="20dp"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:layout_marginLeft="10dp"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:layout_toRightOf="@+id/activity_search_wares_kind_tv" />
            </RelativeLayout>
        </LinearLayout>
        <Button
            android:id="@+id/activity_search_wares_submit"
            android:layout_width="60dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/shape_rounded_corner_bg"
            android:text="@string/search"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/activity_search_wares_history_ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#333"
                    android:textSize="12sp"
                    android:text="@string/search_history"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_delete"/>
            </RelativeLayout>

            <com.mimile.base.view.tagview.TagFlowLayout
                android:id="@+id/activity_search_wares_flowlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

            </com.mimile.base.view.tagview.TagFlowLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#333"
                    android:textSize="12sp"
                    android:text="@string/search_discory"/>
                <CheckBox
                    android:id="@+id/activity_search_wares_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:layout_marginRight="10dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/check_box_eye_selector" />
            </RelativeLayout>

            <com.mimile.base.view.tagview.TagFlowLayout
                android:id="@+id/activity_search_wares_discory_flowlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

            </com.mimile.base.view.tagview.TagFlowLayout>
            <TextView
                android:id="@+id/activity_search_wares_ban_note_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                android:textSize="10sp"
                android:text="@string/search_discory_note"/>
        </LinearLayout>
        <FrameLayout
            android:id="@+id/activity_search_wares_frame_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <RelativeLayout
                    android:id="@+id/activity_search_wares_opt_rl"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:padding="10dp">
                    <TextView
                        android:id="@+id/activity_search_wares_filter_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="筛选"
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp"
                        android:gravity="center"
                        android:textColor="#444"
                        android:textSize="12sp"
                        android:drawableRight="@drawable/ic_filter"
                        android:drawableLeft="@drawable/layout_divider_gray"/>
                    <View
                        android:id="@+id/activity_search_wares_v_line"
                        android:layout_width="0.2dp"
                        android:layout_height="match_parent"
                        android:background="#cdcdcd"
                        android:layout_marginRight="10dp"
                        android:layout_toLeftOf="@+id/activity_search_wares_filter_tv"/>
                    <CheckBox
                        android:id="@+id/activity_search_wares_layout_type_cb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        android:button="@null"
                        android:layout_toLeftOf="@+id/activity_search_wares_v_line"
                        android:background="@drawable/check_box_serarch_wares_layout_type_selector"/>
                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_toLeftOf="@+id/activity_search_wares_layout_type_cb"
                        android:orientation="horizontal">
                        <RadioButton
                            android:id="@+id/activity_search_wares_sort_key_cb"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:button="@null"
                            android:textColor="@drawable/radio_button_text_selector"
                            android:textSize="12sp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:text="@string/sort_multiple"
                            android:gravity="center"
                            android:drawableRight="@drawable/radion_button_foucs_selector"/>
                        <RadioButton
                            android:id="@+id/activity_search_wares_sort_key_sell_cb"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:button="@null"
                            android:layout_weight="1"
                            android:textColor="@drawable/radio_button_text_selector"
                            android:layout_gravity="center_vertical"
                            android:gravity="center"
                            android:textSize="12sp"
                            android:text="销量优先"/>
                    </RadioGroup>
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.2dp"
                    android:background="#cdcdcd" />
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/activity_search_wares_rv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#EAEAEA">

                </android.support.v7.widget.RecyclerView>
            </LinearLayout>


        </FrameLayout>
    </RelativeLayout>

</LinearLayout>
